apps/syncthing/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      nodeSelector:
        kubernetes.io/hostname: althea
      hostNetwork: true
      containers:
        - name: syncthing
          image: lscr.io/linuxserver/syncthing:2.1.3
          ports:
            - containerPort: 8384
              hostPort: 8384
            - containerPort: 22000
              hostPort: 22000
              protocol: TCP
            - containerPort: 22000
              hostPort: 22000
              protocol: UDP
            - containerPort: 21027
              hostPort: 21027
              protocol: UDP
          securityContext:
            privileged: true
          resources:
            requests:
              memory: 256Mi
            limits:
              memory: 384Mi
          volumeMounts:
            - name: config-volume
              mountPath: /config
              subPath: syncthing
            - name: storage-volume
              mountPath: /mnt/storage
            - name: backup-volume
              mountPath: /mnt/sata-ssd
            - name: storage2-volume
              mountPath: /mnt/storage2
            - name: storage3-volume
              mountPath: /mnt/storage3
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: data-pvc
        - name: storage-volume
          persistentVolumeClaim:
            claimName: media-pvc
        - name: backup-volume
          persistentVolumeClaim:
            claimName: backup-pvc
        - name: storage2-volume
          persistentVolumeClaim:
            claimName: storage2-pvc
        - name: storage3-volume
          persistentVolumeClaim:
            claimName: storage3-pvc
